--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -217,7 +217,7 @@
     </table>
      <h2>Gráfica de Coordenadas</h2>
     <div id="grafica-container" class="center-image">
-    <img src="/media/temporal.png" alt="Imagen generada">
+    <img src="{{ img_url }}" alt="Gráfica" />
     </div>
 </body>
 </html>
