--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -217,7 +217,7 @@
     </table>
      <h2>Gráfica de Coordenadas</h2>
       <div id="grafica-container" class="center-image">
-        <img src="{{ img_url }}" alt="Gráfica" />
+        <img src="{{ MEDIA_URL }}temporal.png" alt="Gráfica" />
       </div>
 </body>
 </html>
