--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -5,7 +5,7 @@
     <style>
         /* Estilos adicionales específicos para la página de inicio */
         h1 {
-            color: blue;
+            color: black;
         }
     </style>
 {% endblock %}
@@ -17,6 +17,13 @@
 <head>
     <title>Resultados</title>
         <style>
+                h1 {
+          color: black;
+        }
+        .contenedor-principal {
+          max-width: 800px; /* Ajusta el ancho máximo según tus necesidades */
+          margin: 0 auto; /* Centra el contenedor en la página */
+        }
         .tabla-resultados {
             max-width: 800px; /* Ajusta el valor según tus necesidades */
             margin: 0 auto; /* Centra la tabla en la página */
