--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block contenido %}
-
+<div class="contenedor-principal">
 <!DOCTYPE html>
 <html>
 <head>
@@ -228,5 +228,5 @@
       </div>
 </body>
 </html>
-
+</div>
 {% endblock %}
