--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,57 +1,90 @@
-{% extends 'base.html' %}
-
-{% block estilos %}
-    <style>
-        /* Estilos adicionales específicos para el menú vertical */
-        .sidebar {
-            width: 200px;
-            background-color: #f2f2f2;
-            padding: 10px;
-            box-sizing: border-box;
-            float: left;
-        }
-        .sidebar ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
-        .sidebar ul li {
-            margin-bottom: 10px;
-        }
-        .sidebar ul li a {
-            color: #333;
-            text-decoration: none;
-            display: block;
-            padding: 5px;
-            background-color: #ddd;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        .sidebar ul li a:hover {
-            background-color: #aaa;
-            color: #fff;
-        }
-        .content {
-            margin-left: 30px; /* Para dejar espacio para el menú vertical */
-            padding: 10px;
-            box-sizing: border-box;
-        }
-    </style>
-{% endblock %}
-
-{% block contenido %}
-    <div class="sidebar">
-      <h2>Aplicaciones</h2>
-        <ul>
-            <li><a href="/loadfile">Poligonal Cerrada</a></li>
-            <li><a href="#">Ondulacion Geoidal</a></li>
-            <li><a href="#">Aplicación 3</a></li>
-            <li><a href="#">Aplicación 4</a></li>
-        </ul>
-    </div>
-    <div class="content">
-        <!-- Contenido principal de la página -->
-        <h1>Bienvenido a mi página principal</h1>
-        <p>Este es el contenido de la página de inicio.</p>
-    </div>
+{% extends 'base.html' %} {% block estilos %}
+<style>
+  /* Estilos adicionales específicos para el menú vertical */
+  .sidebar {
+    width: 200px;
+    background-color: #f2f2f2;
+    padding: 10px;
+    box-sizing: border-box;
+    float: left;
+  }
+  .sidebar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  .sidebar ul li {
+    margin-bottom: 10px;
+  }
+  .sidebar ul li a {
+    color: #333;
+    text-decoration: none;
+    display: block;
+    padding: 5px;
+    background-color: #ddd;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  .sidebar ul li a:hover {
+    background-color: #aaa;
+    color: #fff;
+  }
+  .content {
+    margin-left: 30px; /* Para dejar espacio para el menú vertical */
+    padding: 10px;
+    box-sizing: border-box;
+  }
+</style>
+{% endblock %} {% block contenido %}
+<div class="sidebar">
+  <h2>Aplicaciones</h2>
+  <ul>
+    <li><a href="/loadfile">Poligonal Cerrada brazo interno</a></li>
+    <li>
+      <a href="/loadfile_poldoble">Poligonal Cerrada Doble punto de apoyo</a>
+    </li>
+    <li><a href="#">Poligonal Cerrada brazo externo</a></li>
+    <li><a href="#">Tiempo de posicionamiento GPS</a></li>
+    <li><a href="#">Nivelación Geometrica</a></li>
+    <li><a href="#">Calcular Azimut</a></li>
+    <li><a href="#">Calcular Distancia entre puntos</a></li>
+  </ul>
+</div>
+<div class="content">
+  <!-- Contenido principal de la página -->
+  <h1>TOPTOP</h1>
+  <p>
+    Bienvenido a nuestra página web dedicada a la geodesia y topografía. Somos
+    una plataforma en línea que ofrece una amplia gama de aplicaciones y
+    herramientas especializadas en estas áreas, diseñadas para ayudar a
+    profesionales y entusiastas a realizar mediciones precisas, análisis
+    detallados y generar informes profesionales. Nuestra página cuenta con una
+    interfaz intuitiva y fácil de usar, que permite a los usuarios acceder
+    rápidamente a las diversas aplicaciones disponibles. Estas aplicaciones
+    abarcan diferentes aspectos de la geodesia y topografía, como el cálculo de
+    coordenadas, la determinación de distancias y ángulos, la nivelación de
+    terrenos, entre muchas otras.
+  </p>
+  <p>
+    Una de las características destacadas de nuestra página es la posibilidad de
+    cargar datos en diferentes formatos, como archivos de texto, CSV, Esto
+    brinda una gran flexibilidad a los usuarios a la hora de trabajar con sus
+    propios datos y les permite aprovechar al máximo nuestras aplicaciones.
+    Además, nuestras herramientas están respaldadas por algoritmos avanzados y
+    métodos geodésicos de vanguardia, lo que garantiza resultados precisos y
+    confiables en cada cálculo realizado. Estamos comprometidos con la calidad y
+    la precisión, y nos esforzamos por mantenernos actualizados con las últimas
+    tendencias y avances en geodesia y topografía. Nuestro objetivo es
+    proporcionar una solución integral para las necesidades de los profesionales
+    de la geodesia y topografía, así como para estudiantes y entusiastas que
+    buscan aprender y aplicar estos conocimientos en sus proyectos. Ya sea que
+    necesites realizar mediciones topográficas para un proyecto de construcción,
+    trazar líneas de límites precisas o realizar cálculos geodésicos complejos,
+    nuestra página ofrece las herramientas adecuadas para ayudarte a lograr tus
+    objetivos. Explora nuestra página y descubre la amplia gama de aplicaciones
+    disponibles. Ya seas un experto en geodesia o un principiante en el campo,
+    estamos aquí para respaldarte en tus esfuerzos y brindarte las herramientas
+    necesarias para tener éxito en tus proyectos de geodesia y topografía.
+  </p>
+</div>
 {% endblock %}
