--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
     </style>
     {% block estilos %}{% endblock %}
   </head>
-  <body>
+  <body style="font-family: Arial, sans-serif;">
     <div class="menu">
       <ul>
         <li><a href="/">Inicio</a></li>
