--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,55 +1,80 @@
 {% extends 'base.html' %} {% block estilos %}
-<style>
-  /* Estilos adicionales específicos para el menú vertical */
-  .sidebar {
-    width: 200px;
-    background-color: #f2f2f2;
-    padding: 10px;
-    box-sizing: border-box;
-    float: left;
-  }
-  .sidebar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  .sidebar ul li {
-    margin-bottom: 10px;
-  }
-  .sidebar ul li a {
-    color: #333;
-    text-decoration: none;
-    display: block;
-    padding: 5px;
-    background-color: #ddd;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-  }
-  .sidebar ul li a:hover {
-    background-color: #aaa;
-    color: #fff;
-  }
-  .content {
-    margin-left: 30px; /* Para dejar espacio para el menú vertical */
-    padding: 10px;
-    box-sizing: border-box;
-  }
-</style>
-{% endblock %} {% block contenido %}
-<div class="sidebar">
-  <h2>Aplicaciones</h2>
-  <ul>
-    <li><a href="/loadfile">Poligonal Cerrada brazo interno</a></li>
-    <li>
-      <a href="/loadfile_poldoble">Poligonal Cerrada Doble punto de apoyo</a>
-    </li>
-    <li><a href="#">Poligonal Cerrada brazo externo</a></li>
-    <li><a href="#">Tiempo de posicionamiento GPS</a></li>
-    <li><a href="#">Nivelación Geometrica</a></li>
-    <li><a href="#">Calcular Azimut</a></li>
-    <li><a href="#">Calcular Distancia entre puntos</a></li>
-  </ul>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>BASE</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f1f1f1;
+      color: #333333;
+      margin: 0;
+      padding: 0;
+    }
+
+    .sidebar {
+      width: 200px;
+      background-color: #f2f2f2;
+      padding: 10px;
+      box-sizing: border-box;
+      float: left;
+    }
+
+    .sidebar ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .sidebar ul li {
+      margin-bottom: 10px;
+    }
+
+    .sidebar ul li a {
+      color: #333;
+      text-decoration: none;
+      display: block;
+      padding: 5px;
+      background-color: #ddd;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+
+    .sidebar ul li a:hover {
+      background-color: #aaa;
+      color: #fff;
+    }
+
+    .content {
+      margin-left: 30px; /* Para dejar espacio para el menú vertical */
+      padding: 10px;
+      box-sizing: border-box;
+    }
+
+    h1 {
+      font-size: 24px;
+      color: #333333;
+    }
+
+    p {
+      font-size: 16px;
+      line-height: 1.5;
+    }
+  </style>
+</head>
+<body>
+  <div class="sidebar">
+    <h2>Aplicaciones</h2>
+    <ul>
+      <li><a href="/loadfile">Poligonal Cerrada brazo interno</a></li>
+      <li><a href="/loadfile_poldoble">Poligonal Cerrada Doble punto de apoyo</a></li>
+      <li><a href="#">Poligonal Cerrada brazo externo</a></li>
+      <li><a href="#">Tiempo de posicionamiento GPS</a></li>
+      <li><a href="#">Nivelación Geometrica</a></li>
+      <li><a href="#">Calcular Azimut</a></li>
+      <li><a href="#">Calcular Distancia entre puntos</a></li>
+    </ul>
+  </div>
 <div class="content">
   <!-- Contenido principal de la página -->
   <h1>TOPTOP</h1>
