--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -51,9 +51,11 @@
       box-sizing: border-box;
     }
 
-    h1 {
+     h1 {
       font-size: 24px;
       color: #333333;
+      text-align: center; /* Para centrar horizontalmente */
+      margin-top: 0; /* Para eliminar el espacio superior */
     }
 
     p {
