--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,4 +1,17 @@
 {% extends 'base.html' %} {% block estilos %}
+<style>
+  /* Estilos adicionales específicos para la página de inicio */
+  h1 {
+    color: blue;
+  }
+  .center-image {
+    display: flex;
+    justify-content: center;
+    align-items: center; /* Opcional: Si deseas centrar verticalmente también */
+  }
+</style>
+{% endblock %}{% block contenido %}
+
 <!DOCTYPE html>
 <html>
 <head>
