--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -25,6 +25,11 @@
       padding: 0;
     }
 
+    .container {
+      max-width: 800px; /* Ancho máximo del contenedor */
+      margin: 0 auto; /* Centrar horizontalmente */
+    }
+
     .sidebar {
       width: 200px;
       background-color: #f2f2f2;
@@ -64,11 +69,9 @@
       box-sizing: border-box;
     }
 
-    h1{
+    h1 {
       font-size: 24px;
       color: #333333;
-
-
     }
 
     p {
