--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
         padding: 10px;
         text-align: center;
       }
+      .container {
+      max-width: 600px; /* Ancho máximo del contenedor */
+      }
       .menu ul {
         list-style-type: none;
         margin: 0;
