--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -64,9 +64,10 @@
     }
 
     .content {
-      margin-left: 100px; /* Para dejar espacio para el menú vertical */
+      margin-left: 40px; /* Para dejar espacio para el menú vertical */
       padding: 10px;
       box-sizing: border-box;
+      max-width: 800px; /* Ancho máximo del contenedor */
     }
 
     h1 {
