--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -68,6 +68,7 @@
       padding: 10px;
       box-sizing: border-box;
       max-width: 800px; /* Ancho máximo del contenedor */
+      text-align: justify;
     }
 
     h1 {
