--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -65,7 +65,7 @@
 
     .content {
       margin-left: 40px; /* Para dejar espacio para el menú vertical */
-      margin-right 40px;
+      margin-right: 40px;
       padding: 10px;
       box-sizing: border-box;
       max-width: 800px; /* Ancho máximo del contenedor */
