--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -53,6 +53,7 @@
       text-decoration: none;
       display: block;
       padding: 5px;
+      text-align: left; 
       background-color: #ddd;
       border-radius: 5px;
       transition: background-color 0.3s ease;
