--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -2,7 +2,7 @@
 <style>
   /* Estilos adicionales específicos para la página de inicio */
   h1 {
-    color: blue;
+    color: black;
   }
   .center-image {
     display: flex;
