--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,16 +1,14 @@
-{% extends 'base.html' %} {% block estilos %}
+{% extends 'base.html' %} 
+{% block estilos %}
 <style>
   /* Estilos adicionales específicos para la página de inicio */
   h1 {
-    color: black;
-  }
-  .center-image {
-    display: flex;
-    justify-content: center;
-    align-items: center; /* Opcional: Si deseas centrar verticalmente también */
+    color: blue;
   }
 </style>
-{% endblock %}{% block contenido %}
+{% endblock %}
+
+{% block contenido %}
 
 <!DOCTYPE html>
 <html>
