--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -17,9 +17,9 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f1f1f1;
+      background-color: #ffffff;
       color: #333333;
-      margin: 0;
+      margin: 10px;
       padding: 0;
     }
 
