--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -3,7 +3,7 @@
 <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f1f1f1;
+      background-color: #ffffff;
       color: #333333;
       margin: 0;
       padding: 0;
