--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -91,7 +91,7 @@
   </div>
 <div class="content">
   <!-- Contenido principal de la página -->
-  <h1>TOPTOP>
+  <h1>TOPTOP</h1>
   <p>
     Bienvenido a nuestra página web dedicada a la geodesia y topografía. Somos
     una plataforma en línea que ofrece una amplia gama de aplicaciones y
