--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -65,8 +65,13 @@
 
     h1 {
       font-size: 24px;
-      color: #333333;}
+      color: #333333;
       text-align: center;
+      background: linear-gradient(45deg, #ff9c00, #ff6f00);
+      padding: 10px;
+      border-radius: 10px;
+      color: #fff;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
     p {
