--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -64,16 +64,16 @@
     }
 
     h1 {
-      font-size: 24px;
+      font-size: 26px;
       color: #333333;
       text-align: center;
-      background: linear-gradient(45deg, #ff9c00, #ff6f00);
+      background: linear-gradient(45deg, #002240, #004c80);
       padding: 10px;
       border-radius: 10px;
       color: #fff;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
-
+  
     p {
       font-size: 16px;
       line-height: 1.5;
