--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -25,12 +25,12 @@
       background-color: #f2f2f2;
       padding: 10px;
       box-sizing: border-box;
-      float: left;
+
     }
 
     .sidebar ul {
       list-style-type: none;
-      margin: 0;
+      margin: 20px;
       padding: 0;
     }
 
