--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -16,7 +16,7 @@
     }
 
     .container {
-      max-width: 800px; /* Ancho máximo del contenedor */
+      max-width: 1200px; /* Ancho máximo del contenedor */
       margin: 0 auto; /* Centrar horizontalmente */
     }
 
@@ -32,6 +32,7 @@
       list-style-type: none;
       margin: 20px;
       padding: 0;
+      float: left;
     }
 
     .sidebar ul li {
