--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -30,7 +30,7 @@
 
     .sidebar ul {
       list-style-type: none;
-      margin: 20px;
+      margin: 0;
       padding: 0;
       float: left;
     }
