--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -75,7 +75,9 @@
       <li>
         <a href="/loadfile_poldoble">Poligonal Cerrada Doble punto de apoyo</a>
       </li>
-      <li><a href="#">Poligonal Cerrada brazo externo</a></li>
+      <li>
+        <a href="/loadfile_poldoble_ex">Poligonal Cerrada brazo externo</a>
+      </li>
       <li><a href="#">Tiempo de posicionamiento GPS</a></li>
       <li><a href="#">Nivelación Geometrica</a></li>
       <li><a href="#">Calcular Azimut</a></li>
@@ -120,6 +122,8 @@
       tus esfuerzos y brindarte las herramientas necesarias para tener éxito en
       tus proyectos de geodesia y topografía.
     </p>
+    <br />
+    <p>Creado por el Ing. Sebastian Martinez</p>
   </div>
 </div>
 {% endblock %}
