--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
   <head>
     <title>TOPTOP</title>
+    <link rel="icon" href="{% static 'images/s.ico' %}" />
     <style>
             /* Estilos CSS para el menú */
             .menu {
@@ -68,7 +71,6 @@
     </div>
 
     <div class="content">{% block contenido %}{% endblock %}</div>
-
 
     {% block scripts %}{% endblock %}
   </body>
