--- a/templates/pol_cerrada_ex.html
+++ b/templates/pol_cerrada_ex.html
@@ -17,22 +17,17 @@
           color: black;
         }
         .contenedor-principal {
-          max-width: 900px; /* Ajusta el ancho máximo según tus necesidades */
+          max-width: 800px; /* Ajusta el ancho máximo según tus necesidades */
           margin: 0 auto; /* Centra el contenedor en la página */
         }
         .tabla-resultados {
-          max-width: 900px; /* Ajusta el valor según tus necesidades */
+          max-width: 800px; /* Ajusta el valor según tus necesidades */
           margin: 0 auto; /* Centra la tabla en la página */
           table-layout: auto; /* Ajusta el tamaño de las columnas automáticamente */
         }
         .tabla-resultados th,
         .tabla-resultados td {
           text-align: center; /* Centra el contenido de las celdas */
-          padding-left: 1px; /* Ajusta el valor según tus necesidades */
-          padding-right: 1px; /* Ajusta el valor según tus necesidades */
-        }
-        .tabla-resultados tbody tr {
-          line-height: 1.1; /* Ajusta el valor según tus necesidades */
         }
         .tabla-resultados1 {
           max-width: 600px; /* Ajusta el valor según tus necesidades */
@@ -98,17 +93,18 @@
       <h1>Resultados</h1>
 
       <p><strong>Precision:</strong> 1:{{ precision|floatformat:0}}</p>
-      <p><strong>Azimut de llegada Teorico:</strong> {{ azimut1 }}</p>
-      <p><strong>Azimut de llegada Obtenido:</strong> {{ azimut2 }}</p>
-      <p><strong>Error de llegada Angular:</strong> {{ err_az }}</p>
+      <p><strong>Tipos de Angulos:</strong> {{ tipo_angulos }}</p>
+      <p><strong>Suma teorica:</strong> {{ suma_teorica }}</p>
+      <p><strong>Suma Angular:</strong> {{ suma_angular }}</p>
+      <p><strong>Error Cierre Angular:</strong> {{ error_cierre }}</p>
       <p><strong>Número de Vertices:</strong> {{ num_vertices }}</p>
       <p><strong>Distancia Poligonal:</strong> {{ dist_pol }} metros</p>
       <p>
-        <strong>Error Proyecciones Norte:</strong> {{errorn|floatformat:3}}
+        <strong>Error Proyecciones Norte:</strong> {{error_norte|floatformat:3}}
         metros
       </p>
       <p>
-        <strong>Error Proyecciones Este:</strong> {{ errore|floatformat:3 }}
+        <strong>Error Proyecciones Este:</strong> {{ error_este|floatformat:3 }}
         metros
       </p>
 
@@ -129,9 +125,9 @@
           {% for arranque in arranque %}
           <tr>
             <td>{{ arranque.id }}</td>
-            <td>{{ arranque.norte|floatformat:3 }}</td>
-            <td>{{ arranque.este|floatformat:3 }}</td>
-            <td>{{ arranque.altura|floatformat:3 }}</td>
+            <td>{{ arranque.norte }}</td>
+            <td>{{ arranque.este }}</td>
+            <td>{{ arranque.altura }}</td>
 
             <!-- Muestra más columnas si es necesario -->
           </tr>
@@ -177,15 +173,10 @@
       <table class="tabla-resultados">
         <thead>
           <tr>
-            <th>Armada</th>
-            <th>Visado</th>
-            <th>Azimuts Iniciales</th>
-            <th>Azimuts Corregidos</th>
-            <th>Correción Norte</th>
-            <th>Correción Este</th>
+            <th>Angulos Horizontal Corregidos</th>
+            <th>Azimuts</th>
             <th>Proyección Norte</th>
             <th>Proyección Este</th>
-            <th>Correción Altura</th>
             <th>Proyección Cota</th>
 
             <!-- Agrega más columnas si es necesario -->
@@ -194,16 +185,11 @@
         <tbody>
           {% for resultado in resultados %}
           <tr>
-            <td>{{ resultado.id }}</td>
-            <td>{{ resultado.visado }}</td>
-            <td>{{ resultado.az_init }}</td>
-            <td>{{ resultado.az_corr }}</td>
-            <td>{{ resultado.correcionY|floatformat:3 }}</td>
-            <td>{{ resultado.correcionX|floatformat:3 }}</td>
+            <td>{{ resultado.anguloh_corr }}</td>
+            <td>{{ resultado.az }}</td>
             <td>{{ resultado.proy_y|floatformat:3 }}</td>
             <td>{{ resultado.proy_x|floatformat:3 }}</td>
             <td>{{ resultado.correcionZ|floatformat:3 }}</td>
-            <td>{{ resultado.Dist_v|floatformat:3 }}</td>
 
             <!-- Muestra más columnas si es necesario -->
           </tr>
@@ -229,6 +215,7 @@
             <td>{{ coordenadas.norte|floatformat:3 }}</td>
             <td>{{ coordenadas.este|floatformat:3 }}</td>
             <td>{{ coordenadas.altura|floatformat:3 }}</td>
+
             <!-- Muestra más columnas si es necesario -->
           </tr>
           {% endfor %}
@@ -236,7 +223,7 @@
       </table>
       <h2>Gráfica de Poiligonal</h2>
       <div class="center-image">
-        <form action="{% url 'grafica2' %}" method="get">
+        <form action="{% url 'grafica3' %}" method="get">
           <button type="submit">Ver gráfica</button>
         </form>
       </div>
