--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -73,7 +73,7 @@
     <ul>
       <li><a href="/loadfile">Poligonal Cerrada brazo interno</a></li>
       <li>
-        <a href="/loadfile_poldoble">Poligonal Cerrada Doble punto de apoyo</a>
+        <a href="/loadfile_poldoble">Poligonal Abierta Doble punto de apoyo</a>
       </li>
       <li>
         <a href="/loadfile_poldoble_ex">Poligonal Cerrada brazo externo</a>
