--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -73,7 +73,7 @@
     <ul>
       <li><a href="/loadfile">Poligonal Cerrada brazo interno</a></li>
       <li>
-        <a href="/loadfile_poldoble">Poligonal Abierta Doble punto de apoyo</a>
+        <a href="/loadfile_poldoble">Poligonal Cerrada Doble punto de apoyo</a>
       </li>
       <li>
         <a href="/loadfile_poldoble_ex">Poligonal Cerrada brazo externo</a>
@@ -87,6 +87,17 @@
   <div class="content">
     <!-- Contenido principal de la página -->
     <h1>TOPTOP</h1>
+    <p
+      style="
+        font-size: 15px;
+        color: #333;
+        background-color: #f2f2f2;
+        padding: 10px;
+        border-radius: 5px;
+      "
+    >
+      Visitas: <span style="font-weight: bold">{{ visit.count }}</span>
+    </p>
 
     <p>
       Bienvenido a nuestra página web dedicada a la geodesia y topografía. Somos
