se crea el mapa de ondulacion geoidal

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -78,7 +78,7 @@
       <li>
         <a href="/loadfile_poldoble_ex">Poligonal Cerrada brazo externo</a>
       </li>
-      <li><a href="#">Tiempo de posicionamiento GPS</a></li>
+      <li><a href="/calcular_ondulacion">Mapa Ondulación GeoCol2004</a></li>
       <li><a href="#">Nivelación Geometrica</a></li>
       <li><a href="#">Calcular Azimut</a></li>
       <li><a href="#">Calcular Distancia entre puntos</a></li>
