--- a/templates/pol_cerrada_ex.html
+++ b/templates/pol_cerrada_ex.html
@@ -155,8 +155,8 @@
         <tbody>
           {% for resultado in resultados %}
           <tr>
-            <td>{{ resultado.id }}</td>
-            <td>{{ resultado.visado }}</td>
+            <td>{{ resultado.ida }}</td>
+            <td>{{ resultado.vis }}</td>
             <td>{{ resultado.alt_isn }}</td>
             <td>{{ resultado.baston }}</td>
             <td>{{ resultado.angulos_horizontales_iniciales }}</td>
