--- a/templates/pol_doble_a.html
+++ b/templates/pol_doble_a.html
@@ -159,8 +159,8 @@
         <tbody>
           {% for resultado in resultados %}
           <tr>
-            <td>{{ resultado.id }}</td>
-            <td>{{ resultado.visado }}</td>
+            <td>{{ resultado.ida }}</td>
+            <td>{{ resultado.vis }}</td>
             <td>{{ resultado.alt_isn }}</td>
             <td>{{ resultado.baston }}</td>
             <td>{{ resultado.angulos_horizontales_iniciales }}</td>
@@ -194,8 +194,8 @@
         <tbody>
           {% for resultado in resultados %}
           <tr>
-            <td>{{ resultado.id }}</td>
-            <td>{{ resultado.visado }}</td>
+            <td>{{ resultado.ida }}</td>
+            <td>{{ resultado.vis }}</td>
             <td>{{ resultado.az_init }}</td>
             <td>{{ resultado.az_corr }}</td>
             <td>{{ resultado.correcionY|floatformat:3 }}</td>
