--- a/templates/loadfile_poldoble.html
+++ b/templates/loadfile_poldoble.html
@@ -67,7 +67,11 @@
           archivos.
         </li>
       </ul>
-      <img src="{% static 'pol2.png' %}" alt="Imagen de ejemplo" width="600" />
+      <img
+        src="{% static 'images/pol2.png' %}"
+        alt="Imagen "
+        style="width: 600px; height: 300px"
+      />
     </div>
 
     <form method="post" enctype="multipart/form-data">
